--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Card from '../components/Card.astro';
 import Nav from '../components/Nav.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="bienvenido to Astro.">
 	<main>
 		<Nav>
 			
